# orgz

./: .env.example  Makefile  README.md  pyproject.toml
.github/workflows/: build-image.yml  linter-check.yml  project-check.yml
app/: logger.py  settings.py
app/adapter/: __init__.py
app/adapter/dto/: __init__.py  activity.py  building.py  elastic.py  organization.py  organizations.py  search.py
app/adapter/search/: __init__.py  elastic.py
app/adapter/store/: activity.py  building.py  db_init.py  elastic.py  models.py  organization.py  sql_adapter.py
app/http/: api_key.py  app.py  lifespan.py
app/http/api/: activity.py  building.py  infra.py  organization.py
docker/: Dockerfile.app  Dockerfile.pytest  Dockerfile.wps  docker-compose.app.yaml  docker-compose.infra.yaml
migrations/: env.py
migrations/versions/: 7e46fd0f39b9_update_cords.py  cecc0f11aed2_add_phone.py  ef61677ce065_init_db.py
tests/: __test_http_api.py  conftest.py  test_activity.py  test_http_api_organization.py  test_organization.py
