[project]
name = "organizations"
version = "0.1.0"
description = ""
authors = [
    { name = "Zero Two", email = "hau.au.999@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "sqlalchemy[asyncio] (>=2.0.42,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "geoalchemy2[shapely] (>=0.18.0,<0.19.0)",
    "elasticsearch (==8.11.1)",
    "aiohttp (>=3.12.15,<4.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
wemake-python-styleguide = "^1.3.0"
flake8-pyproject = "^1.2.3"
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
httpx = "^0.28.1"

[tool.flake8]
max-line-length = 120
max-annotations-complexity = 6
max-complexity = 6
# show-source = true
extend-ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "DAR101",
    "DAR102",
    "DAR003",
    "W391",
    "WPS412",
    "DAR201",
    "DAR401",
    "C101",
    "WPS305",
    "WPS432",
    "WPS110",
    "WPS226",
    "WPS323",
    "WPS412",
]
exclude = [
    "app/settings.py",
    "app/adapter/dto/__init__.py",
    "app/http/api/*.py",
    "app/adapter/dto/organization.py",
    "*test_*.py"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
